Make sure menu covers clock text.

--- a/static/index.css
+++ b/static/index.css
@@ -209,7 +209,7 @@
         height: 100%;
         background-color: var(--background-color);
         width: 100%;
-        z-index: 0;
+        z-index: 1;
         border-radius: 0.5%;
     }
 
@@ -253,6 +253,5 @@
     .clock {
         font-size: 1em;
     }
-
 
 }
